fix crud customer
